# adventofcode2022

./: .gitignore  README.md
day01/: README.md  prob1.awk  prob2.awk
day02/: README.md
day03/: 1.py  Makefile  README.md  common.s  prob1.s  prob2.s
day04/: README.md  prob1.pl  prob2.pl
day05/: README.md  chatgpt.md  prob1.py  prob2.py
day06/: README.md  prob1.zig  prob2.zig
day07/: README.md  prob.d
day08/: README.md  clojure-repl-log.txt  prob1.clj  prob2.clj
day09/: README.md  prob1.groovy  prob2.groovy
day10/: README.md  prob12.go
day11/: README.md  dune  prob1.ml  prob2.ml
day12/: README.md  prob12.py
day13/: README.md  prob1_2.hs
day14/: README.md  prob1.cr  prob2.cr
day15/: README.md  day15.ts
day16/: Cargo.toml  README.md  day16.rs  prob1.dfs.rs  prob2.dfs.rs
day17/: README.md  day17.cc
day18/: README.md  day18.nim
day19/: README.md  day19.jl
day20/: README.md  day20.scala
day21/: README.md  TaggedData.java  TaglessFinal.java  prob1.java  prob2.java
day22/: README.md  day22.swift
day23/: README.md  day23.fsx
day24/: README.md  day24.kts
day25/: README.md  day25.c
