[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
regex = "1"
# typed-arena = "2.0"
bitvec = "1"
itertools = "0.10"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "day16"
path = "day16.rs"
